#+title:     Changelog
#+author:    Logan Barnett-Hoy
#+email:     logustus@gmail.com
#+date:      <2022-07-20 Wed>
#+language:  en
#+file_tags:
#+tags:

* changelog
** Upcoming
*** Breaking
*** Additions
*** Fixes
** v0.10.0
*** Breaking
*** Additions
*** Fixes
** v0.9.0
*** Breaking
*** Additions
*** Fixes
** v0.8.0
*** Breaking
*** Additions
*** Fixes
** v0.7.0
*** Breaking
*** Additions
*** Fixes
** v0.6.0
*** Breaking
*** Additions
*** Fixes
** v0.5.0
*** Breaking
*** Additions
*** Fixes
** v0.4.0
*** Breaking
*** Additions
*** Fixes
** v0.3.0
*** Breaking
*** Additions
1. Add =Result#or_else=, the =Err= equivalent to =Result#and_then=.
*** Fixes
1. Fix the automated release process accounting for =Gemfile.lock=.
2. Fix subheadings for changelog on =Upcoming= not being populated on new
   versions.
** v0.2.0
None of these changes have any release impact.
*** Breaking
*** Additions
1. Flesh out rdoc on all code entities. 100% yard coverage!
2. Bash can get squirrelly Use all Ruby for more complex release scripting.
*** Fixes
1. Fix existing changelog.
2. Make releases actually work beyond version 0.1.0.
** v0.1.0
*** Breaking
*** Additions
1. In the beginning, there was darkness...
*** Fixes