@@ -1,0 +1,19 @@
+# Run branch builds to tell us if the test suite is passing.
+name: Branch
+on:
+  push:
+
+jobs:
+  branch-test:
+    runs-on: ubuntu-latest
+    env:
+      GEM_HOST_API_KEY: ${{ secrets.GEM_HOST_API_KEY }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: .ruby-version
+          bundler-cache: true
+      - name: Test
+        run: |
+          bundle exec rspec
